--- a/vercel.json
+++ b/vercel.json
@@ -3,10 +3,10 @@
     "builds": [
         {
             "src": "./index.py",
-            "use": "@vercel/python"
+            "use": "@vercel/python",
             "config": {
-                "maxLambdaSize": "50mb", // Optional, adjust based on your requirements
-                "runtime": "python3.9" // Specify the desired Python version
+                "maxLambdaSize": "50mb",
+                "runtime": "python3.9"
             }
         }
     ],
