--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 
 Flask==2.2.2
-Werkzeug==2.0.3  # Compatible with Flask 2.2.2 and Python 3.9
+Werkzeug==2.2.2  # Use this to match Flask's version
 beautifulsoup4==4.11.1
 python_telegram_bot==13.14
 requests==2.28.1
