--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-
 Flask==2.2.2
-Werkzeug==2.2.2  # Use this to match Flask's version
+Werkzeug==2.2.2
 beautifulsoup4==4.11.1
 python_telegram_bot==13.14
 requests==2.28.1
